# smartdump

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run.py
example/: app.py
server/: app.py  manager.py
smartdump/: __init__.py  sd.py
smartdump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: __init__.py  app.js  index.html  styles.css
