[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartdump"
version = "0.1.3"
description = "Real-time variable dumper for FastAPI — inspired by Laradumps"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["fastapi", "debug", "dump", "developer-tools"]
authors = [
    { name = "Achelton Pambo", email = "acheltonzuzi@gmail.com" }
]
maintainers = [
    { name = "Achelton Pambo", email = "acheltonzuzi@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/achelton/smartdump"
Repository = "https://github.com/achelton/smartdump"
Issues = "https://github.com/achelton/smartdump/issues"
Documentation = "https://github.com/achelton/smartdump#readme"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
smart-debugger = "run:main"
smartdump = "run:cli"

[tool.setuptools]
py-modules = ["run"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["smartdump*", "server*", "static*"]
exclude = ["example*", "tests*"]

[tool.setuptools.package-data]
static = ["*.html", "*.css", "*.js"]
